--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <input type="text" id="searchBar" placeholder="Şehir Giriniz..">
         </div>
         <div class="content">
-            <div class="city">Istanbul, TR</div>
-            <div class="temp">15°C</div>
-            <div class="desc">Güneşli</div>
-            <div class="minmax">14°C /19°C</div>
+            <div class="city"></div>
+            <div class="temp"></div>
+            <div class="desc"></div>
+            <div class="minmax"></div>
         </div>
     </div>
 
