--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="minmax"></div>
         </div>
     </div>
-
+    <script src="config.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
