fix : app ve footer mobil uyumlu yapıldı

--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>⛅ Weather App | DStudio</title>
+    <link rel="icon" href="/İmages/weather.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="app">
         <div class="header">
             <h1>Hava Durumu</h1>
             <input type="text" id="searchBar" placeholder="Şehir Giriniz..">
         </div>
+
         <div class="content">
             <div class="city"></div>
             <div class="temp"></div>
@@ -19,6 +23,20 @@
             <div class="minmax"></div>
         </div>
     </div>
+
+    <footer>
+        <a href="https://github.com/sinanbozyigit" target="_blank" rel="noopener noreferrer">
+            <img src="/İmages/DSlogo3.png" alt="DStudio Logo" class="footer-logo">
+        </a>
+        <p>
+            © 2025 
+            <a href="https://github.com/sinanbozyigit" target="_blank" rel="noopener noreferrer" id="DStudio">
+                DStudio
+            </a>. Tüm hakları saklıdır.
+        </p>
+    </footer>
+
     <script src="app.js"></script>
 </body>
+
 </html>
