--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>⛅ Weather App | DStudio</title>
-    <link rel="icon" href="/İmages/weather.png" type="image/x-icon">
+    <link rel="icon" href="İmages/weather.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -26,7 +26,7 @@
 
     <footer>
         <a href="https://github.com/sinanbozyigit" target="_blank" rel="noopener noreferrer">
-            <img src="/İmages/DSlogo3.png" alt="DStudio Logo" class="footer-logo">
+            <img src="İmages/DSlogo3.png" alt="DStudio Logo" class="footer-logo">
         </a>
         <p>
             © 2025 
