--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>⛅ Weather App | DStudio</title>
-    <link rel="icon" href="İmages/weather.png" type="image/x-icon">
+    <link rel="shortcut icon" href="İmages/weather.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 
